images, featured posts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,124 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <title>Newsweek - EdSacasa</title>
   </head>
   <body>
-
-  </body>
-</html>
+  	<section class="fixed-top" id="stickynav">
+      <section class="d-flex justify-content-between" id="navscroll">
+        <section class="p-2">
+          <date id="datenav">Thu, Apr 25, 2019</date>
+  	    </section>
+        <section class="p-2" id="signin">
+          <span>SIGN IN</span><a href="#">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
+          <i class="fas fa-bars" id="barsId"></i>
+  	    </section>
+  	  </section>
+      <section class="logoimg"><img src="images/big-logo.svg"></section>
+  	</section>
+  	<nav class="header-bottom" id="navbottom">
+  	  <ul class="page-nav">
+  	            <li><a>U.S.</a></li>
+  	            <li><a>World</a></li>
+  	            <li><a>Bisiness</a></li>
+  	            <li><a>Tech & Science</a></li>
+  	            <li><a>Culture</a></li>
+  	            <li><a>Sports</a></li>
+  	            <li><a>Health</a></li>
+  	            <li><a>Opinion</a></li>
+  	            <li><a>Ndelible</a></li>
+  	            <li><a id="search">Search</a><i class="fas fa-search"></i></li>
+  	        </ul>
+  	 </nav>
+     <section class="content">
+  	        <section class="featured">
+  	            <section class="row">
+  	                <section class="col-md-4 col-lg order-2 order-md-1">
+  	                    <section class="featured">
+  	                        <section class="block-title">FEATURED STORIES</section>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/negombo-sri-lanka.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+  	                            </section>
+  	                            <section class="article-info">
+  	                                <h3>Sri Lanka Muslims Attacked, Forced From Homes</h3>
+  	                                <section class="summary"> Hundreds of Muslim refugees have been forced to flee Sri Lanka’s west coast following reprisals.</section>
+  	                            </section>
+  	                            <section class="related">
+  	                                Church Attacks Are Opposite of Islam's True Teachings
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/gettyimages-1136201085.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                            </section>
+  	                            <section class="article-info">
+  	                                <h3>Lindsey Graham in 1998: Ignoring Subpoenas Impeachable</h3>
+  	                                <section class="summary">Watch: Trump Ally Lindsey Graham Once Said a President Not Complying With Congressional Oversight Was an Impeachable Offense</section>
+  	                            </section>
+  	                            <section class="related">
+  	                                Letter to Congress, Trump: Make Colleges Protect Speech
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/mick-mulvaney.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                            </section>
+  	                            <section class="article-info">
+  	                                <h3>Former Deficit Hawk Mick Mulvaney Defends Growing Debt</h3>
+  	                                <section class="summary">The Trump administration, he said, is “spending a bunch of money on stuff we’re not supposed to.”</section>
+  	                            </section>
+  	                            <section class="related">
+  	                                Top Republicans: Democrats Will 'Never' See Trump Taxes
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/joe-biden-outraises-democratic-opponents.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                            </section>
+  	                            <section class="article-info">
+  	                                <h3>Biden Raises $6.3 Million but Sanders Has More Donors</h3>
+  	                                <section class="summary">The former vice president’s ability to launch his candidacy with such a large fundraising amount will be a big advantage as he tries to hold his polling lead over 19 opponents.</section>
+  	                            </section>
+  	                            <section class="related">
+  	                                Biden Says He’s Different Than Obama but No Specifics
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/gettyimages-1133267016_0.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+  	                            </section>
+  	                            <section class="article-info">
+  	                                <h3>U.S. to Leave Arms Treaty It Wasn’t Following Anyway</h3>
+  	                                <section class="summary">President Donald Trump was set to leave the Arms Trade Treaty, but the U.S. has reportedly acted above international law for years in murky weapons sales around the world.</section>
+  	                            </section>
+  	                            <section class="related">
+  	                                U.S. Blames Russia, China for Space Weapons
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/image_01_fullscreen.8a9dcafb.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                            </section>
+  	                            <section class="article-info" id="sponsored">
+  	                                <h3>ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</h3>
+  	                                <section class="summary">The new Zenith Defy Inventor showcases the groundbreaking Zenith Oscillator control system, which replaces the traditional sprung balance that’s been the standard for over three centuries.</section>
+  	                            </section>
+  	                        </article>
+  	                        <article>
+  	                            <section class="wrap">
+  	                                <a><img src="images/tjhprofilenewsweek.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                            </section>
+  	                            <section class="article-info" id="sponsored">
+  	                                <h3>Law Firms: Fighting for a Noble Cause</h3>
+  	                                <section class="summary">Attorneys are an essential component of modern American society. But who leads the field?</section>
+  	                            </section>
+  	                        </article>
+  	                    </section>
+  	                </section>
+  	               
+  	</body>
+  	</html>
