--- a/index.html
+++ b/index.html
@@ -122,6 +122,60 @@
   	                        </article>
   	                    </section>
   	                </section>
-  	               
+                    <section class="col-md-8 col-lg-5 order-1 order-md-2">
+                        <section class="featured">
+                            <section class="block-title">TOP STORY</section>
+                            <article>
+                                <section class="wrap">
+                                    <a><img src="images/trump.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+                                </section>
+                                <h3>Trump Holds Firm on Impeachment, Says Cooperating 'Sets Terrible Precedent'</h3>
+                                <section class="summary">The president said the White House will still not honor document requests or subpoenas despite Congress passing a resolution formalizing the impeachment inquiry. </section>
+                            </article>
+                        </section>
+                        <section class="featured sticky-top">
+                            <section class="block-title">CULTURE & TRAVEL</section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Is It Safe to Travel to Hong Kong During Protests? Here's What to Consider</h6>
+                                <section class="summary">“I will make sure we control the territory west of Jordan,” Israeli Prime Minister Benjamin Netanyahu said in the run-up to the election.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>What Time Do Clocks Go Back? What You Need to Know for Daylight Saving Time</h6>
+                                <section class="summary">Yes, you need to turn your clock back. No, you don't need to wake up in the middle of the night to do so.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Google Acquires Fitbit for $2.1 Billion—Says Ads Won't Use Wellness Data</h6>
+                                <section class="summary">We see an opportunity to invest even more in Wear OS as well as introduce Made by Google wearable devices into the market," said Google executive Rick Osterloh, announcing the deal.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Heavy Smoking Can Make Your Face Look Older, Study Suggests</h6>
+                                <section class="summary">The scientists said that this knowledge may help to deter some people from taking up the habit or help others to quit.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Franklin Graham Urges Prayers for Trump Through 'Pray for 45' T-shirt</h6>
+                                <section class="summary">Graham, the president of Samaritan's Purse and his late father's Billy Graham Evangelistic Association, quoted the Bible Friday in a plea for Americans to purchase a "Pray for 45" T-shirt.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Who is Chad Wolf? Trump Names New Acting DHS Secretary</h6>
+                                <section class="summary">Wolf will become the fifth person to serve in the role since the beginning of the Trump presidency.</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Kamala Harris Takes a Dig at Elizabeth Warren at Iowa Event</h6>
+                                <section class="summary">"I've only had one client in my entire life, and that has been the people. Unlike other people, unlike others, I have never represented a corporation."</section>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <h6>Cristiano Ronaldo's Hairdresser Found Stabbed to Death in Hotel Room</h6>
+                                <section class="summary">A housekeeper discovered Ricardo Marques Ferreira's body covered in blood and with several stab wounds when she entered his room in Zurich, Switzerland to clean it.</section>
+                            </section>
+                        </section>
+                    </section>
   	</body>
   	</html>
