opinion section, pro image

--- a/index.html
+++ b/index.html
@@ -177,5 +177,63 @@
                             </section>
                         </section>
                     </section>
+                    <section class="col-md-12 col-lg order-3 order-md-2" id="right-col">
+                        <section class="featured">
+                            <section class="block-title">OPINION</section>
+                            <section class="wrap opinion">
+                                <section class="row">
+                                    <section class=" col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                        <p class="info">Ayanna Pressley Is Right: 16-Year-Olds Deserve the Right to Vote</p>
+                                        <p class="byline">BY NANCY DEUTSCH</p>
+                                    </section>
+                                </section>
+                            </section>
+                            <section class="wrap opinion">
+                                <section class="row">
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                        <p class="info">To Stem the Crisis in Lebanon, More Heads Need to Roll</p>
+                                        <p class="byline">BY MARTIN JAY</p>
+                                    </section>
+                                </section>
+                            </section>
+                            <section class="wrap opinion">
+                                <section class="row">
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                        <p class="info">Impeachment? No. Call It a Partisan Effort to Remove the President</p>
+                                        <p class="byline">BY PETER ROFF</p>
+                                    </section>
+                                </section>
+                            </section>
+                            <section class="wrap opinion">
+                                <section class="row">
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                        <p class="info">Billionaires Won't Save Californians From PG&E Disasters</p>
+                                        <p class="byline">BY SYLVIA CHI AND JESSICA GUADALUPE TOVAR</p>
+                                    </section>
+                                </section>
+                            </section>
+                            <section class="wrap opinion">
+                                <section class="row">
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                        <p class="info">Baghdadi's Death Does Not Matter</p>
+                                        <p class="byline">BY MAX ABRAHMS</p>
+                                    </section>
+                                </section>
+                            </section>
+                            <section class="wrap opinion" id="last-opinion">
+                                <section class="row">
+                                  <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-9">
+                                      <p class="info">Stop Calling It the Republican Party</p>
+                                      <p class="byline">BY SETH ABRAMSON</p>
+                                    </section>
+                                  </section>
+                            </section>
+                        </section>
   	</body>
   	</html>
