latest news section

--- a/index.html
+++ b/index.html
@@ -136,42 +136,42 @@
                         <section class="featured sticky-top">
                             <section class="block-title">CULTURE & TRAVEL</section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Is It Safe to Travel to Hong Kong During Protests? Here's What to Consider</h6>
                                 <section class="summary">“I will make sure we control the territory west of Jordan,” Israeli Prime Minister Benjamin Netanyahu said in the run-up to the election.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>What Time Do Clocks Go Back? What You Need to Know for Daylight Saving Time</h6>
                                 <section class="summary">Yes, you need to turn your clock back. No, you don't need to wake up in the middle of the night to do so.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Google Acquires Fitbit for $2.1 Billion—Says Ads Won't Use Wellness Data</h6>
                                 <section class="summary">We see an opportunity to invest even more in Wear OS as well as introduce Made by Google wearable devices into the market," said Google executive Rick Osterloh, announcing the deal.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Heavy Smoking Can Make Your Face Look Older, Study Suggests</h6>
                                 <section class="summary">The scientists said that this knowledge may help to deter some people from taking up the habit or help others to quit.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Franklin Graham Urges Prayers for Trump Through 'Pray for 45' T-shirt</h6>
                                 <section class="summary">Graham, the president of Samaritan's Purse and his late father's Billy Graham Evangelistic Association, quoted the Bible Friday in a plea for Americans to purchase a "Pray for 45" T-shirt.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Who is Chad Wolf? Trump Names New Acting DHS Secretary</h6>
                                 <section class="summary">Wolf will become the fifth person to serve in the role since the beginning of the Trump presidency.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Kamala Harris Takes a Dig at Elizabeth Warren at Iowa Event</h6>
                                 <section class="summary">"I've only had one client in my entire life, and that has been the people. Unlike other people, unlike others, I have never represented a corporation."</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg" class="img-fluid"></section>
+                                <section class="image"><img src="images/image1.jpg"></section>
                                 <h6>Cristiano Ronaldo's Hairdresser Found Stabbed to Death in Hotel Room</h6>
                                 <section class="summary">A housekeeper discovered Ricardo Marques Ferreira's body covered in blood and with several stab wounds when she entered his room in Zurich, Switzerland to clean it.</section>
                             </section>
@@ -235,5 +235,41 @@
                                   </section>
                             </section>
                         </section>
+                        <section class="featured">
+                            <section class="block-title">LATEST NEWS</section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <h6>Ex-RNC Chair Blasts Republicans Threatening 'Civil War' If Trump Impeached</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <h6>California Fire Updates: Kincade, Maria and Sobrante Fires Blaze On</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <h6>Fox News Host Chides GOP for Not Fighting the Way the Democrats Fight</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <h6>Naked California Man and Woman Try to Lure Boy, 11, into Car</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <h6>Powerball Results for 11/2/19: Did Anyone Win the $150 Million Jacpot?</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <h6>F1: All You Need to Know Ahead of the U.S. Grand Prix</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
+                            </section>
+                            <section class="clearfix" id="more-stories-part">
+                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
+                            </section>
+                        </section>
+
   	</body>
   	</html>
