--- a/index.html
+++ b/index.html
@@ -270,6 +270,37 @@
                                 <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
                             </section>
                         </section>
-
+                        <section class="featured">
+                            <section class="block-title"></section>
+                            <article class="sponsored-article">
+                                <section class="wrap">
+                                    <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">SPECIAL EDITION</span></a>
+                                </section>
+                                <section class="article-info" id="sponsored">
+                                    <h3>Leaders of Qatar, Part 1</h3>
+                                    <section class="summary">Qatar is one of the fast-growing regional economies and among the most promising in the MENA region, maintaining balanced growth rates despite various global challenges.</section>
+                                </section>
+                            </article>
+                            <section class="block">
+                                <section class="d-flex align-items-center" id="add">
+                                    <span class="p-2 align-self-center icon-n"></span>
+                                    <span class="p-2" id="block-text">Sign up for our Newsletter</span>
+                                </section>
+                                <span class="signup">SIGN UP <i class="fas fa-chevron-right"></i></span>
+                                <p class="update">Update your preferences »</p>
+                            </section>
+                            <article class="sponsored-article">
+                                <section class="wrap">
+                                    <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
+                                </section>
+                                <section class="article-info" id="sponsored">
+                                    <h3>EQUIS Accredited Business Schools 2019</h3>
+                                    <section class="summary">It is important to check whether a school is accredited by a credible global accreditation body and meets internationally agreed quality standards. EQUIS gives you that piece of mind.</section>
+                                </section>
+                            </article>
+                        </section>
+                      </section>
+                    </section>
+                  </section>
   	</body>
   	</html>
