--- a/index.html
+++ b/index.html
@@ -302,5 +302,48 @@
                       </section>
                     </section>
                   </section>
+                  <section class="bottom">
+                  <section class="magazine">
+                    <section class="row">
+                      <section class="col-md-3 align-self-center">
+                          <section class="wrap">
+                              <a><img src="images/17190426-0503cover1800x2400.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">MAY 03 ISSUE</span></a>
+                          </section>
+                          <p class="gray">See All Features</p>
+                      </section>
+                      <section class="col-md-9">
+                              <section class="row justify-content-center title-border">
+                                  <span class="col-12 icon-n"></span>
+                                  <span class="part-title">IN THE MAGAZINE</span>
+                              </section>
+                          <section class="row">
+                              <article class="col-md-4 magazine-article">
+                                  <section class="image-article" id="image-article1"><img src="images/yang1.jpg"/></section>
+                                  <section class="category">
+                                      <span class="mag-cat">Features</span>
+                                      <span class="cat"><a href="/us">U.S.</a></span>
+                                  </section>
+                                  <h5 class="article-title">Andrew Yang: Math, Jobs and the Robot Future</h5>
+                              </article>
+                              <article class="col-md-4 magazine-article">
+                                  <section class="image-article" id="image-article2"><img src="images/yang1.jpg"/></section>
+                                  <section class="category">
+                                      <span class="mag-cat">Features</span>
+                                      <span class="cat"><a href="/us">U.S.</a></span>
+                                  </section>
+                                  <h5 class="article-title">Tug of War: Photographs Capture Horror of Turkey's Offensive Into Syria</h5>
+                              </article>
+                              <article class="col-md-4 magazine-article">
+                                  <section class="image-article" id="image-article3"><img src="images/yang1.jpg"/></section>
+                                  <section class="category">
+                                      <span class="mag-cat">Downloads</span>
+                                      <span class="cat"><a href="/us">U.S.</a></span>
+                                  </section>
+                                  <h5 class="article-title">Sheldon Whitehouse On Impeachment, Court-Packing and "Getting to 67 Votes"</h5>
+                              </article>
+                          </section>
+                      </section>
+                  </section>
+                </section>
   	</body>
   	</html>
