--- a/index.html
+++ b/index.html
@@ -345,5 +345,37 @@
                       </section>
                   </section>
                 </section>
+                <section class="magazine">
+                <section class="row bottom">
+                    <article class="col-md-3 magazine-article">
+                        <section class="image-article" id="image-article4"><img src="images/image1.jpg"/></section>
+                        <section class="category">
+                            <span class="mag-cat">Cover</span>
+                            <span class="cat"><a href="/us">CULTURE</a></span>
+                        </section>
+                        <h5 class="article-title">9 Larger-Than-Life Sculpture Parks Around the World</h5>
+                    </article>
+                    <article class="col-md-3 magazine-article">
+                        <section class="image-article" id="image-article5"><img src="images/image1.jpg"/></section>
+                        <section class="category">
+                            <span class="mag-cat">DOWNTIME</span>
+                            <span class="cat"><a href="/us">CULTURE</a></span>
+                        </section>
+                        <h5 class="article-title">Kelly McCreary on the Writers of 'Grey's Anatomy' and Getting Out the Vote</h5>
+                    </article>
+                    <article class="col-md-3 magazine-article">
+                        <section class="image-article" id="image-article6"><img src="images/image1.jpg"/></section>
+                        <section class="category">
+                            <span class="mag-cat">DOWNTIME</span>
+                            <span class="cat"><a href="/us">CULTURE</a></span>
+                        </section>
+                        <h5 class="article-title">The Literary Influences of Superstar Musician David Bowie</h5>
+                    </article>
+                    <article class="col-md-3 magazine-article">
+                        <section class="image-article" id="image-article7"><span class="mag-cat" id="marathon">IN FOCUS</span><img src="images/image1.jpg"/></section>
+                        <h5 class="article-title">THE QUEEN’S SPEECH</h5>
+                    </article>
+                </section>
+                </section>
   	</body>
   	</html>
